syntax="proto3";
package conf_grpc;

service ConfHandler {
  rpc GetConf (FetchRequest) returns (Conf);
}

message FetchRequest {
    string username =1;
}

message Conf {
    string username =1;
    repeated Button buttons =2;
}

message Button {
    string text =1;
    string value =2;
}